@@ -36,7 +36,6 @@
     }
   ],
   "dependencies": {
-    "JSON2": "0.1.0",
     "es6-promise": "2.0.1",
     "foreach": "2.0.5",
     "lodash-compat": "3.5.0"
